# spharagusnet

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
data/: planes_origen_modificaciones.csv  planes_origen_modificaciones_bcn.csv
scripts/: README_extraccion_texto.md  bcn_sparql_planes.py  comunas_interes.txt  download_documentos_minvu.py  entrenar_modelo_extraccion.py  extraer_texto_con_modelo.py  pipeline_completo.py  preparar_dataset_entrenamiento.py
spharagusnet/: __init__.py  __main__.py  download.py  extract.py  model.py  ocr.py  paths.py  tokenizer.py
